@@ -22,6 +22,7 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
 ! Support minimizing HSL color
 ! HEX colors are converted to lowercase to smaller compressed size
 ! New CSS3 properties
+! Method for merging @import files
 - Added localizations for css_optimiser.php
 - Fixed bug with cookie setting for custom templates
 - Minor security problem in css_optimiser.php fixed
